--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,9 @@ twitter_username: AlvinZhuGe
 facebook_username: 
 github_username:  AlvinZhu
 email: alvin.zhuge@gmail.com
-weibo_username: 
-zhihu_username: 
+qq_number: 157735432
+weibo_username: alvinzhuge
+zhihu_username: alvinzhuge
 linkedIn_username: 
 dribbble_username:
 
