添加联系方式

--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ url: "https://alvinzhu.github.io" # the base hostname & protocol for your site
 permalink: /:year/:month/:day/:title/
 
 # other links
-twitter_username: AlvinZhuGe
-facebook_username: 
+twitter_username: alvinzhuge
+facebook_username: alvinzhuge
 github_username:  AlvinZhu
 email: alvin.zhuge@gmail.com
 qq_number: 157735432
