--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ email: alvin.zhuge@gmail.com
 qq_number: 157735432
 weibo_username: alvinzhuge
 zhihu_username: alvinzhuge
-linkedIn_username: 
+linkedIn_username: alvinzhuge
 dribbble_username:
 
 description_footer: Alvin's Blog
